--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -44,6 +44,7 @@ packages:
   - fonts-powerline
   - powerline
   - fzf
+  - speedtest-cli
 runcmd:
   - [ systemctl, daemon-reload ]
   - [ systemctl, enable, qemu-guest-agent ]
