--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -37,7 +37,9 @@ byobu_by_default: enable-system
 system_info:
   default_user:
     name: ubuntu
-    home: /home/ubuntu
+    primary_group: dialout
+    no_user_group: true
+    expiredate: '2032-09-01'
     lock_passwd: false
     sudo: ALL=(ALL) NOPASSWD:ALL
     shell: /bin/zsh
@@ -80,7 +82,6 @@ runcmd:
   - sysctl -w net.ipv6.conf.default.disable_ipv6=1
   - sysctl -w net.ipv6.conf.lo.disable_ipv6=1
   - [ systemctl, daemon-reload ]
-  - [ systemctl, enable, qemu-guest-agent ]
   - [ systemctl, start, qemu-guest-agent ]
   - systemctl enable docker
   - systemctl start docker
@@ -92,7 +93,7 @@ runcmd:
   - vesctl completion bash > /etc/bash_completion.d/vesctl > /dev/null
   - pip3 install sphobjinv
   - 'usermod -u 502 ubuntu'
-  - 'groupmod -g 20 ubuntu'
+  - 'groupmod -n ubuntu dialout'
 write_files:
   - path: /etc/sysctl.d/10-disable-ipv6.conf
     permissions: '0644'
