--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -78,13 +78,13 @@ packages:
   - code
   - powershell
 runcmd:
-  - sysctl -w net.ipv6.conf.all.disable_ipv6=1
-  - sysctl -w net.ipv6.conf.default.disable_ipv6=1
-  - sysctl -w net.ipv6.conf.lo.disable_ipv6=1
+  - [ sysctl, -w, net.ipv6.conf.all.disable_ipv6=1 ]
+  - [ sysctl, -w, net.ipv6.conf.default.disable_ipv6=1 ]
+  - [ sysctl, -w, net.ipv6.conf.lo.disable_ipv6=1 ]
   - [ systemctl, daemon-reload ]
   - [ systemctl, start, qemu-guest-agent ]
-  - systemctl enable docker
-  - systemctl start docker
+  - [ systemctl, enable, docker ]
+  - [ systemctl, start, docker ]
   - curl -LO "https://vesio.azureedge.net/releases/vesctl/$(curl -s https://downloads.volterra.io/releases/vesctl/latest.txt)/vesctl.linux-amd64.gz"
   - gunzip vesctl.linux-amd64.gz
   - mv vesctl.linux-amd64 /usr/local/bin/vesctl
