--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -94,7 +94,7 @@ runcmd:
   - pip3 install sphobjinv
   - 'usermod -u 502 ubuntu'
   - 'groupmod -n ubuntu dialout'
-  - 'su -l ubuntu: byobu-enable'
+  - 'su -l -s /bin/zsh -c byobu-enable ubuntu'
   - 'chown -R ubuntu:ubuntu /home/ubuntu'
 write_files:
   - path: /etc/sysctl.d/10-disable-ipv6.conf
