--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -77,6 +77,7 @@ packages:
   - code
   - powershell
   - byobu
+  - elinks
 runcmd:
   - [ sysctl, -w, net.ipv6.conf.all.disable_ipv6=1 ]
   - [ sysctl, -w, net.ipv6.conf.default.disable_ipv6=1 ]
