--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -25,6 +25,9 @@ apt:
       kubernetes:
           source: "deb [arch=amd64 signed-by=$KEY_FILE] https://apt.kubernetes.io/ kubernetes-xenial main"
           keyid: "B53DC80D13EDEF05"
+      google-chrome:
+          source: "deb [arch=amd64 signed-by=$KEY_FILE] http://dl.google.com/linux/chrome/deb/ stable main"
+          keyid: "B53DC80D13EDEF05"
       docker: 
           source: "deb [arch=amd64 signed-by=$KEY_FILE] https://download.docker.com/linux/ubuntu jammy stable"
           keyid: "8D81803C0EBFCD88"
