--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -22,6 +22,9 @@ apt:
       vscode:
           source: "deb [arch=amd64 signed-by=$KEY_FILE] https://packages.microsoft.com/repos/vscode stable main"
           keyid: "EB3E94ADBE1229CF"
+      teams:
+          source: "deb [arch=amd64 signed-by=$KEY_FILE] http://packages.microsoft.com/repos/ms-teams stable main"
+          keyid: "EB3E94ADBE1229CF"
       kubernetes:
           source: "deb [arch=amd64 signed-by=$KEY_FILE] https://apt.kubernetes.io/ kubernetes-xenial main"
           keyid: "B53DC80D13EDEF05"
@@ -81,6 +84,8 @@ packages:
   - powershell
   - byobu
   - elinks
+  - google-chrome
+  - teams
 runcmd:
   - [ sysctl, -w, net.ipv6.conf.all.disable_ipv6=1 ]
   - [ sysctl, -w, net.ipv6.conf.default.disable_ipv6=1 ]
