--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -29,8 +29,8 @@ apt:
           source: "deb [arch=amd64 signed-by=$KEY_FILE] https://apt.kubernetes.io/ kubernetes-xenial main"
           keyid: "B53DC80D13EDEF05"
       google-chrome:
-          source: "deb [arch=amd64 signed-by=$KEY_FILE] http://dl.google.com/linux/chrome/deb/ stable main"
-          keyid: "4EB27DB2A3B88B8B"
+          source: 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main'
+          keyid: "EB4C1BFD4F042F6DDDCCEC917721F63BD38B4796"
       docker: 
           source: "deb [arch=amd64 signed-by=$KEY_FILE] https://download.docker.com/linux/ubuntu jammy stable"
           keyid: "8D81803C0EBFCD88"
