--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -84,7 +84,7 @@ packages:
   - powershell
   - byobu
   - elinks
-  - google-chrome
+  - google-chrome-stable
   - teams
 runcmd:
   - [ sysctl, -w, net.ipv6.conf.all.disable_ipv6=1 ]
