--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -12,8 +12,9 @@ power_state:
   message: Rebooting the OS
   condition: if [ -e /var/run/reboot-required ]; then exit 0; else exit 1; fi
 package_reboot_if_required: True
-ssh_pwauth: false
+ssh_pwauth: true
 chpasswd: {expire: False}
+password: ubuntu
 byobu_by_default: enable
 apt:
   sources:
