--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -48,7 +48,7 @@ system_info:
   default_user:
     name: robin
     shell: /bin/zsh
-    primary_group: dialout
+    primary_group: 20
     no_user_group: true
     lock_passwd: false
     ssh-authorized-keys:
@@ -107,10 +107,9 @@ runcmd:
   - chmod 755 /usr/local/bin/vesctl
   - vesctl completion bash > /etc/bash_completion.d/vesctl > /dev/null
   - usermod -u 502 robin
-  - groupmod -g 1000 dialout
-  - groupmod -g 20 staff
+  - groupmod -g 999 dialout
+  - groupmod -g 20 -n mordasiewicz staff
   - groupmod -g 50 dialout
-  - groupmod -n mordasiewicz staff
 write_files:
   - path: /etc/sysctl.d/10-disable-ipv6.conf
     permissions: '0644'
