--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -4,7 +4,7 @@ timezone: US/Eastern
 package_update: true
 package_upgrade: true
 hostname: workstation
-fqdn: workstation.example.com
+fqdn: workstation.mordasiewicz.com
 prefer_fqdn_over_hostname: true
 power_state:
   mode: reboot
@@ -14,7 +14,6 @@ power_state:
 package_reboot_if_required: True
 ssh_pwauth: true
 chpasswd: {expire: False}
-password: ubuntu
 byobu_by_default: enable
 apt:
   sources:
