--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -110,6 +110,7 @@ packages:
   - elinks
   - google-chrome-stable
   - nfs-common
+  - mkisofs
 runcmd:
   - [ sysctl, -w, net.ipv6.conf.all.disable_ipv6=1 ]
   - [ sysctl, -w, net.ipv6.conf.default.disable_ipv6=1 ]
