--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -25,7 +25,6 @@ system_info:
     no_user_group: true
     lock_passwd: false
     sudo: ALL=(ALL) NOPASSWD:ALL
-    groups: [adm, audio, cdrom, dialout, floppy, video, plugdev, dip, netdev, libvirtd, docker]
 apt:
   sources:
       powershell:
@@ -111,6 +110,8 @@ packages:
   - google-chrome-stable
   - nfs-common
   - mkisofs
+  - packer
+  - qemu-kvm
 runcmd:
   - [ sysctl, -w, net.ipv6.conf.all.disable_ipv6=1 ]
   - [ sysctl, -w, net.ipv6.conf.default.disable_ipv6=1 ]
