--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -113,6 +113,7 @@ packages:
   - packer
   - qemu-kvm
   - ansible
+  - tigervnc-tools
 runcmd:
   - [ sysctl, -w, net.ipv6.conf.all.disable_ipv6=1 ]
   - [ sysctl, -w, net.ipv6.conf.default.disable_ipv6=1 ]
