--- a/cloud-config.yml
+++ b/cloud-config.yml
@@ -114,6 +114,7 @@ packages:
   - qemu-kvm
   - ansible
   - tigervnc-tools
+  - xsltproc
 runcmd:
   - [ sysctl, -w, net.ipv6.conf.all.disable_ipv6=1 ]
   - [ sysctl, -w, net.ipv6.conf.default.disable_ipv6=1 ]
